apps/ad-webhook/cr/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-webhook
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: add-node-selector
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: add-node-selector
    spec:
      containers:
      - image: registry.kloudlite.io/kloudlite/development/admission-webhook:v1.0.5
        imagePullPolicy: Always
        name: main
        resources:
          limits:
            cpu: 50m
            memory: 50Mi
          requests:
            cpu: 10m
            memory: 10Mi
