apps/ad-webhook/cr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: add-node-selector
  namespace: kube-system
spec:
  selector:
    app: add-node-selector
  ports:
  - name: webhook
    port: 443
    targetPort: 8443
